Content changes and add finding tasks

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -9,13 +8,15 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;500;700;1000&display=swap" rel="stylesheet">
+
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="assets/prismjs/themes/prism-tomorrow.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
 
     <script defer src="assets/fontawesome/js/solid.js"></script>
+    <script defer src="assets/fontawesome/js/brands.js"></script>
     <script defer src="assets/fontawesome/js/fontawesome.js"></script>
 </head>
 <body>
